Fix detailLogo alignment
Fixes #90

--- a/fixes.css
+++ b/fixes.css
@@ -48,6 +48,9 @@
   .detailPageContent {
     padding-left: 28.45vw !important;
   }
+  .detailLogo {
+    margin-left: 28.45% !important;
+  }
 }
 @media (min-aspect-ratio: 2.7/1) {
   .detailImageContainer .card {
